# container-recipes

./: .gitignore  README.md  make_all.bash  podman-prune.bash
atarist-crossdev/: Dockerfile  README-build.md  README-howto-run.md  README-use.md  README.md  build-debian--snapshot.bash  build-debian.config  build-ubuntu.config  build.bash  build.config  run-debian.bash  run-ubuntu.bash  run.bash  run.config
atarist-crossdev/cache-crossmint/: README.md
atarist-crossdev/cache-emutos/: README.md
atarist-crossdev/cache-pulsar/: README.md
atarist-crossdev/sample-workspace/cmanship-11/: CMakeLists.txt  CMakeToolchainMintelf.txt  README.md  cmbuild.bash  cmrefresh.bash  hatari-autorun.bash
atarist-crossdev/sample-workspace/cmanship-11/include/: README.md
atarist-crossdev/sample-workspace/cmanship-11/src/: cmans_11.cpp
atarist-crossdev/sample-workspace/hlo_tos_using_cmake/: .clangd  CMakeLists.txt  cmbuild.bash  cmrefresh.bash  compile_commands.json  hatari-autorun.bash  hatari.bash
atarist-crossdev/sample-workspace/hlo_tos_using_cmake/drive_c/: README.md
atarist-crossdev/sample-workspace/hlo_tos_using_cmake/include/: hello.hpp  wait.hpp
atarist-crossdev/sample-workspace/hlo_tos_using_cmake/src/: __main__.cpp  hello.cpp  wait.cpp
crossdev-atarist/: Dockerfile  README-howto-docker.md  README-howto-run.md  README.md  extract-archives.bash  extract-crossmint.bash  extract-emutos.bash
crossdev-atarist/repository/: README.md
crossdev-atarist/sample-workspace/hlo_tos/: README.md  hlo_tos.cpp
debian-based--abstract--cpp-dev/: Dockerfile  README-build.md  README.md  build-debian--release.bash  build-debian--snapshot.bash  build-debian.config  build-ubuntu--release.bash  build-ubuntu--snapshot.bash  build-ubuntu.config  build.bash  build.config
debian-based--abstract--pulsar-edit/: Dockerfile  README-build.md  README.md  build-debian--release.bash  build-debian.config  build-ubuntu--release.bash  build-ubuntu--snapshot.bash  build-ubuntu.config  build.bash
